--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          content="Wedding Invitation | 22nd Feb 2023, Vikas, Nicky">
       <meta name="twitter:image" content="assets/wedding.png">
 
-      <title>Wedding Invitation | FEB 22 | Vikas and Nicky</title>
+      <title>Wedding Invitation | FEB 22-23 | Vikas and Nicky</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -41,20 +41,25 @@
             <h4>Invites you to their</h4>
             <h3>wedding ceremony</h3>
             <p>
-               on <span class="date">22 FEBRUARY 2022</span></29><br/> At <span class="place">Vill. Shahpur,</span> Distt. Karnal                
+               on <span class="date">22-23 FEBRUARY 2022</span></29><br/> At <span class="place">Vill. Shahpur,</span> Distt. Karnal                
             </p>
          </div>
       </div>
       <div id="time"></div>
       <p class="dance-med">
-         
+         Itinary
       </p>
+      <h2> Wednesday, 22nd February</h2>
+      <aside>Mandha 10:00 AM</aside>
+      <aside>Lunch 1:00 PM</aside>
+      <aside>Ladies Sangeet/Cocktail 7:00 PM onwards</aside>
+      <br/>
+      <h2> Thrusday, 23nd February</h2>
+      <aside>Departure of barat 10:00 AM</aside>
+      <br/>
       <div class="actions">
         <a href="https://goo.gl/maps/nhu8DsQDkoFccAht8" target="_blank">
           <div class="venue">SEE THE VENUE</div>
-        </a>
-        <a href="./assets/RishiAndNeha.pdf" target="_blank" download="Invitation | 22nd Feb | Hope to see you there!">
-          <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
       <p class="footer">
