--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
       <aside>Mandha 10:00 AM</aside>
       <aside>Lunch 1:00 PM</aside>
       <aside>Ladies Sangeet/Cocktail 7:00 PM onwards</aside>
+      <div class="actions">
+         <a href="https://goo.gl/maps/nhu8DsQDkoFccAht8" target="_blank">
+           <div class="venue">SEE THE VENUE</div>
+         </a>
+       </div>
       <br/>
-      <h2> Thrusday, 23nd February</h2>
+      <h2> Thursday, 23rd February</h2>
       <aside>Departure of barat 10:00 AM</aside>
       <br/>
-      <div class="actions">
-        <a href="https://goo.gl/maps/nhu8DsQDkoFccAht8" target="_blank">
-          <div class="venue">SEE THE VENUE</div>
-        </a>
-      </div>
       <p class="footer">
          Can't wait to celebrate auspicious moment of our family with you! <br>
          Just a ping away for any queries: +91 7206664629, 9996560352
