--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
          <a href="https://goo.gl/maps/nhu8DsQDkoFccAht8" target="_blank">
            <div class="venue">SEE THE VENUE</div>
          </a>
+         <a href="./assets/Vikas.png" target="_blank" download="Invitation | 18 Feb | Hope to see you there!">
+            <div class="venue">DOWNLOAD INVITATION CARD</div>
+          </a>
        </div>
       <br/>
       <h2> Thursday, 23rd February</h2>
@@ -68,9 +71,9 @@
          Just a ping away for any queries: +91 7206664629, 9996560352
          <span></span>
       </p>
-      <!-- <div class="music" id="body">
+      <div class="music" id="body">
         <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop" autoplay></audio> 
-      </div> -->
+      </div>
       <p class="happiness">Join us in our happiness!</p>
       <!-- partial -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
