--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <meta property="og:title" content="Wedding Invitation | 22nd Feb 2023" />
       <meta property="og:description"
          content="Wedding Invitation | 22nd Feb 2023" />
-      <meta property="og:image" content="https://vikas-weds-nicky.netlify.app/assets/wedding.png" />
-      <meta property="og:url" content="https://vikas-weds-nicky.netlify.app/assets/wedding.png" />
+      <meta property="og:image" content="https://imgur.com/PNwFXGM" />
+      <meta property="og:url" content="https://imgur.com/PNwFXGM" />
       <meta property="og:site_name" content="Wedding Invitation | 22nd Feb 2023" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Invitation | 22nd Feb 2023">
       <meta name="twitter:title" content="Wedding Invitation | 22nd Feb 2023">
       <meta name="twitter:description"
          content="Wedding Invitation | 22nd Feb 2023, Vikas, Nicky">
-      <meta name="twitter:image" content="https://vikas-weds-nicky.netlify.app/assets/wedding.png">
+      <meta name="twitter:image" content="https://imgur.com/PNwFXGM">
 
       <title>Wedding Invitation | FEB 22-23 | Vikas and Nicky</title>
 
