--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <meta property="og:title" content="Wedding Invitation | 22nd Feb 2023" />
       <meta property="og:description"
          content="Wedding Invitation | 22nd Feb 2023" />
-      <meta property="og:image" content="https://imgur.com/PNwFXGM" />
-      <meta property="og:url" content="https://imgur.com/PNwFXGM" />
+      <meta property="og:image" content="https://i.imgur.com/13qqNBY.png" />
+      <meta property="og:url" content="https://i.imgur.com/13qqNBY.png" />
       <meta property="og:site_name" content="Wedding Invitation | 22nd Feb 2023" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Invitation | 22nd Feb 2023">
       <meta name="twitter:title" content="Wedding Invitation | 22nd Feb 2023">
       <meta name="twitter:description"
          content="Wedding Invitation | 22nd Feb 2023, Vikas, Nicky">
-      <meta name="twitter:image" content="https://imgur.com/PNwFXGM">
+      <meta name="twitter:image" content="https://i.imgur.com/13qqNBY.png">
 
       <title>Wedding Invitation | FEB 22-23 | Vikas and Nicky</title>
 
@@ -58,7 +58,7 @@
          <a href="https://goo.gl/maps/nhu8DsQDkoFccAht8" target="_blank">
            <div class="venue">SEE THE VENUE</div>
          </a>
-         <a href="./assets/Vikas.png" target="_blank" download="Invitation | 18 Feb | Hope to see you there!">
+         <a href="./assets/Vikas.png" target="_blank" download="Invitation | 22 Feb | Hope to see you there!">
             <div class="venue">DOWNLOAD INVITATION CARD</div>
           </a>
        </div>
